--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         }
     },
     "require": {
-        "illuminate/database": "^11.33"
+        "illuminate/database": "^11.33",
+        "psr/http-message": "^2.0"
     }
 }
